--- a/server/package.json
+++ b/server/package.json
@@ -5,14 +5,15 @@
   "description": "Manages ref arch list",
   "author": "Eric Redmond <eric.redmond@nike.com>",
   "dependencies": {
-    "lodash": "^3.9.1",
+    "lodash": "^4.12.0",
     "co": "^4.5.4",
     "co-body": "^4.2.0",
     "koa": "^0.20.0",
     "koa-path": "^1.0.0",
     "koa-mongo": "^0.5.0",
     "bunyan": "^1.8.1",
-    "promise": "^7.1.0"
+    "promise": "^7.1.0",
+    "request": "^2.72.0"
   },
   "devDependencies": {
     "mocha": "*",
